welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:4: error: not found: value x
	{avance(); x=x+1}
                   ^Methods:6: error: not found: value x
	for (p<-1 to x) {recule}; poseBiscuit()}
                     ^