welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet() {
	while(!estSurBiscuit())
	{avance(); x=x+1}
	if(estSurBiscuit()) {prendBiscuit(); 
	for (p<-1 to x) {recule}; poseBiscuit()}
}
